--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,16 @@
     margin: 0px;
 }
 
-header {
-    max-width: 1440px;
-    height: 700px;
-    font-size: 20px;
-    text-align: center;
+body {
     background-image: url("../img/city.png");
     background-repeat: no-repeat;
+}
+
+header {
+    max-width: 1440px;
+    height: auto;
+    font-size: 20px;
+    text-align: center;
 }
 
 .container {
@@ -100,4 +103,61 @@ header {
 
 li li a {
     padding: 5px;
+}
+
+.content {
+    text-align: center;
+    margin-top: 205px;
+    padding-left: 5px;
+}
+
+.point {
+    width: 100px;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #ffffff;
+    border-radius: 50%;
+    border: none;
+    border: 0.1px solid black;
+    transition: 0.5s;
+}
+
+.point + .point {
+    margin-left: 5px;
+}
+
+.point:hover {
+    transform: scale(1.2);
+}
+
+.pet {
+    background-image: url("../img/dog.png");
+}
+
+.education {
+    background-image: url("../img/t-shirt.png");
+}
+
+.clothes {
+    background-image: url("../img/a__hat.png");
+}
+
+.property__sale {
+    background-image: url("../img/house.png");
+}
+
+.phone {
+    background-image: url("../img/phone.png");
+}
+
+.technique {
+    background-image: url("../img/fridge.png");
+}
+.watch {
+    background-image: url("../img/watch.png");
+}
+
+.news {
+    background-image: url("../img/newsp.png");
 }
