--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ li li a {
     border-radius: 50%;
     border: none;
     border: 0.1px solid black;
+    box-shadow: 0px 6px 6px 0px rgb(169, 169, 169);
     transition: 0.5s;
 }
 
