--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ header {
     margin-top: 100px;
     display: inline-flex;
     border: 20px solid rgb(169, 169, 169, 0.8);
+    border-radius: 2px;
 }
 
 .menu__points {
@@ -121,8 +122,8 @@ li li a {
     border-radius: 50%;
     border: none;
     border: 0.1px solid black;
-    box-shadow: 0px 6px 6px 0px rgb(169, 169, 169);
     transition: 0.5s;
+    box-shadow: 0px 6px 6px 0px rgb(169, 169, 169);
 }
 
 .point + .point {
